fix: handle other-option overflow

--- a/src/styles/loginSignup.css
+++ b/src/styles/loginSignup.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: auto;
+  padding: auto;
 }
 
 .container {
@@ -10,6 +10,8 @@ body {
   flex-wrap: wrap;
   height: 100vh;
   background: linear-gradient(180deg, #2e2f36 0%, #17181c 100%);
+  position: relative;
+  overflow: auto;
 }
 
 .left {
@@ -54,7 +56,7 @@ body {
 }
 
 .title {
-  margin: 0px;
+  margin: 0;
   font-weight: 500;
   font-size: 4rem;
 
@@ -65,7 +67,7 @@ body {
 }
 
 .subtitle {
-  margin: 0px;
+  margin: 0;
   font-weight: 400;
   font-size: 1rem;
   width: 40vh;
@@ -83,6 +85,7 @@ body {
   align-items: flex-start;
   min-height: 20vh;
   max-height: 50vh;
+  min-width: 0;
 
   /* Inside auto layout */
   flex: none;
@@ -94,7 +97,7 @@ body {
   font-weight: 400;
   font-size: 2rem;
   line-height: 48px;
-  margin: 0px;
+  margin: 0;
 
   /* Inside auto layout */
   flex: none;
